<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/resultText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />
            <LinearLayout
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ButtonsLayout01"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn07"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btn07Click"
                        android:text="@string/Button_07"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                    <Button
                        android:id="@+id/btn08"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btn08Click"
                        android:text="@string/Button_08"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                    <Button
                        android:id="@+id/btn09"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btn09Click"
                        android:text="@string/Button_09"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                    <Button
                        android:id="@+id/btnAdd"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btnAddClick"
                        android:text="@string/Button_Add"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ButtonsLayout02"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn04"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btn04Click"
                        android:text="@string/Button_04"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                    <Button
                        android:id="@+id/btn05"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btn05Click"
                        android:text="@string/Button_05"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                    <Button
                        android:id="@+id/btn06"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btn06Click"
                        android:text="@string/Button_06"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                    <Button
                        android:id="@+id/btnMinus"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btnMinusClick"
                        android:text="@string/Button_Minus"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ButtonsLayout03"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn01"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btn01Click"
                        android:text="@string/Button_01"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                    <Button
                        android:id="@+id/btn02"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btn02Click"
                        android:text="@string/Button_02"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                    <Button
                        android:id="@+id/btn03"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btn03Click"
                        android:text="@string/Button_03"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                    <Button
                        android:id="@+id/btnDivide"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btnDivideClick"
                        android:text="@string/Button_Divide"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ButtonsLayout04"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnClear"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btnClearClick"
                        android:text="@string/Button_Clear"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                    <Button
                        android:id="@+id/btn00"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btn00Click"
                        android:text="@string/Button_00"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                    <Button
                        android:id="@+id/btnDot"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btnDotClick"
                        android:text="@string/Button_Dot"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

                    <Button
                        android:id="@+id/btnMultiply"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:onClick="btnMultiplyClick"
                        android:text="@string/Button_Multiply"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnResult"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:onClick="btnResultClick"
                    android:text="@string/Button_Result"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>